<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    android:padding="@dimen/dialog_margin"
    tools:context=".SpaceInvadersActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_over_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toTopOf="@+id/score_text_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/score_text_label"
        android:textColor="@android:color/white"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@+id/high_score_layout"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        tools:layout_editor_absoluteX="32dp" />

    <LinearLayout
        android:id="@+id/high_score_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/restart_button"
        app:layout_constraintTop_toBottomOf="@+id/score_text_view"
        tools:layout_editor_absoluteX="32dp">

        <ProgressBar
            android:id="@+id/new_high_score_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/new_high_score_text_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/new_high_score_message"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text_size"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/restart_button"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:onClick="restartGame"
        android:text="@string/restart_button"
        app:layout_constraintBottom_toTopOf="@+id/main_menu_button"
        app:layout_constraintTop_toBottomOf="@+id/high_score_layout"
        tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/main_menu_button"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="returnToMainMenu"
        android:text="@string/main_menu_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restart_button"
        tools:layout_editor_absoluteX="32dp" />

</android.support.constraint.ConstraintLayout>